# Architect_MCP

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
crates/architect-core/: Cargo.toml
crates/architect-core/src/: lib.rs
crates/architect-core/src/analyzer/: api.rs  call_graph.rs  dependency.rs  error_audit.rs  external_coupling.rs  metrics.rs  mod.rs  outbound_calls.rs  security.rs
crates/architect-core/src/languages/: mod.rs
crates/architect-prompts/: Cargo.toml
crates/architect-prompts/src/: lib.rs
crates/architect-resources/: Cargo.toml
crates/architect-resources/src/: lib.rs
crates/architect-server/: Cargo.toml
crates/architect-server/src/: main.rs
crates/architect-tools/: Cargo.toml
crates/architect-tools/src/: lib.rs
crates/architect-tools/src/call_graph/: mod.rs
crates/architect-types/: Cargo.toml
crates/architect-types/src/: lib.rs
