[workspace]
members = [
    "crates/architect-server",
    "crates/architect-tools",
    "crates/architect-types",
    "crates/architect-core",
    "crates/architect-prompts",
    "crates/architect-resources",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Architect"]

[workspace.dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0" }
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars = "1.2.1"
axum = { version = "0.7", features = ["macros"] }
tokio-util = { version = "0.7", features = ["full"] }
rmcp = { version = "1.2.0", features = ["server", "transport-io", "transport-streamable-http-server"] }
architect-core = { path = "crates/architect-core" }
architect-types = { path = "crates/architect-types" }
architect-tools = { path = "crates/architect-tools" }
architect-prompts = { path = "crates/architect-prompts" }
architect-resources = { path = "crates/architect-resources" }
