[package]
name = "architect-core"
version = "0.1.0"
edition = "2024"

[dependencies]
architect-types = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
walkdir = "2.5"
rmcp = { workspace = true }
