[package]
name = "architect-core"
version = "0.1.0"
edition = "2024"

[dependencies]
architect-types = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-go = "0.21"
tree-sitter-c = "0.21"
tree-sitter-cpp = "0.22"
tree-sitter-java = "0.21"
tree-sitter-ruby = "0.21"
tree-sitter-php = "0.23"
tree-sitter-kotlin = "0.3"
walkdir = "2.5"
ignore = "0.4"
rayon = "1.10"
tempfile = "3.10"
rmcp = { workspace = true }
