[package]
name = "architect-server"
version = "0.1.0"
edition = "2024"

[dependencies]
architect-core = { workspace = true }
architect-tools = { workspace = true }
architect-prompts = { workspace = true }
architect-resources = { workspace = true }
rmcp = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
