[package]
name = "architect-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
architect-types = { workspace = true }
architect-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
